# rscopulas

./: .gitignore  Cargo.toml  LICENSE  PYPI.md  README.md  RELEASE.md  benchmarks-latest.md  docs.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  cases.json  common.py  python_runner.py  r_runner.R  run.py
crates/rscopulas-accel/: Cargo.toml  README.md
crates/rscopulas-accel/src/: cuda_backend.rs  lib.rs  metal_backend.rs
crates/rscopulas-core/: Cargo.toml  README.md
crates/rscopulas-core/benches/: cross_language.rs  gaussian.rs
crates/rscopulas-core/examples/: benchmark_runner.rs  benchmark_support.rs  khoudraji_pair.rs  pair_copula_clayton.rs  quickstart_gaussian.rs  vine_r_vine_fit.rs
crates/rscopulas-core/src/: accel.rs  archimedean_math.rs  backend.rs  cuda_backend.rs  data.rs  errors.rs  fit.rs  lib.rs  math.rs  metal_backend.rs  stats.rs
crates/rscopulas-core/src/domain/: archimedean.rs  common.rs  elliptical.rs  factor.rs  hac.rs  mod.rs  vine.rs
crates/rscopulas-core/src/hac/: mod.rs
crates/rscopulas-core/src/paircopula/: bb1.rs  bb6.rs  bb7.rs  bb8.rs  clayton.rs  common.rs  frank.rs  gaussian.rs  gumbel.rs  joe.rs  khoudraji.rs  mod.rs  polish.rs  rotated.rs  student_t.rs  tawn.rs  tll.rs
crates/rscopulas-core/src/vine/: eval.rs  fit.rs  mod.rs  rosenblatt.rs  sample.rs  structure.rs
crates/rscopulas-core/tests/: exec_backends.rs  reference_clayton.rs  reference_factor.rs  reference_frank.rs  reference_gaussian.rs  reference_gumbel.rs  reference_hac.rs  reference_khoudraji.rs  reference_paircopula.rs  reference_paircopula_rotations.rs  reference_student_t.rs  reference_tll.rs  reference_tree_select.rs  reference_vine.rs  reference_vine_r.rs  reference_vine_r_regression.rs  reference_vine_truncation.rs  rosenblatt_transforms.rs
crates/rscopulas-python/: Cargo.toml
crates/rscopulas-python/src/: lib.rs
demo/: next.config.ts  package-lock.json  package.json
demo/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
demo/app/[...slug]/: page.tsx
demo/components/: docs-shell.tsx  mdx-components.tsx  mdx-content.tsx  mobile-nav.tsx  theme-toggle.tsx
demo/lib/: docs.ts  format-display-title.ts
docs/: README.md  benchmarks.md  examples.md  getting-started.md  hac.md  khoudraji.md  pair-copulas.md  python.md  rust.md  specs.md  vines.md
docs/mdx/: .atlas-analysis.json  docs.json  index.mdx  introduction.mdx  quickstart-python.mdx  quickstart-rust.mdx  vercel.json
docs/mdx/api/python/: overview.mdx  pair-copula.mdx  vine-copula.mdx
docs/mdx/api/rust/: exec-policy.mdx  overview.mdx  pair-copula.mdx  vine-copula.mdx
docs/mdx/concepts/: copula-families.mdx  pseudo-observations.mdx
docs/mdx/docs-main/: index.mdx  introduction.mdx  quickstart-python.mdx
docs/mdx/docs-main/api/python/: copula-models.mdx  fit-result.mdx  overview.mdx  plotting.mdx  vine-copula.mdx
docs/mdx/docs-main/api/rust/: copula-model.mdx  vine-copula.mdx
docs/mdx/docs-main/concepts/: copula-families.mdx  fit-diagnostics.mdx  pseudo-observations.mdx
docs/mdx/docs-main/guides/: hierarchical-archimedean.mdx  pair-copulas.mdx  vine-copulas.mdx
docs/mdx/guides/: hierarchical-archimedean.mdx  khoudraji.mdx  pair-copulas.mdx  vine-copulas.mdx  visualization.mdx
docs/mdx/performance/: benchmarks.mdx
fixtures/reference/r-copula/v1_1_3/: clayton_fit_d2_case01.json  clayton_log_pdf_d2_case01.json  clayton_sample_summary_d2_case01.json  frank_fit_d2_case01.json  frank_log_pdf_d2_case01.json  frank_sample_summary_d2_case01.json  gaussian_fit_d2_case01.json  gaussian_log_pdf_d2_case01.json  gaussian_sample_summary_d2_case01.json  gumbel_fit_d2_case01.json  gumbel_log_pdf_d2_case01.json  gumbel_sample_summary_d2_case01.json  khoudraji_fit_case01.json  khoudraji_pair_case01.json  khoudraji_sample_summary_case01.json  student_t_fit_d2_case01.json  student_t_log_pdf_d2_case01.json  student_t_sample_summary_d2_case01.json
fixtures/reference/vinecopula/v2/: gaussian_c_vine_log_pdf_d4_case01.json  gaussian_c_vine_sample_summary_d4_case01.json  gaussian_d_vine_log_pdf_d4_case01.json  gaussian_d_vine_sample_summary_d4_case01.json  mixed_r_vine_fit_data_d5_case01.json  mixed_r_vine_log_pdf_d5_case01.json  mixed_r_vine_sample_summary_d5_case01.json  mixed_r_vine_trunc2_log_pdf_d5_case01.json  mixed_r_vine_trunc2_sample_summary_d5_case01.json  pair_bb1_case01.json  pair_bb1_rot180_case01.json  pair_bb1_rot270_case01.json  pair_bb1_rot90_case01.json  pair_bb6_case01.json  pair_bb6_rot180_case01.json  pair_bb6_rot270_case01.json  pair_bb6_rot90_case01.json  pair_bb7_case01.json  pair_bb7_rot180_case01.json  pair_bb7_rot270_case01.json  pair_bb7_rot90_case01.json  pair_bb8_case01.json  pair_bb8_rot180_case01.json  pair_bb8_rot270_case01.json  pair_bb8_rot90_case01.json  pair_clayton_case01.json  pair_clayton_rot180_case01.json  pair_clayton_rot270_case01.json  pair_clayton_rot90_case01.json  pair_frank_case01.json  pair_gaussian_case01.json  pair_gumbel_case01.json  pair_gumbel_rot180_case01.json  pair_gumbel_rot270_case01.json  pair_gumbel_rot90_case01.json  pair_joe_case01.json  pair_joe_rot180_case01.json  pair_joe_rot270_case01.json  pair_joe_rot90_case01.json  pair_student_t_case01.json  (+4 more)
python/examples/: copula_gallery.py  copula_visualisation.py  pypi_examples_smoke.py  quickstart.py
python/rscopulas/: __init__.py  _models.py  plotting.py
python/tests/: test_bindings.py  test_conditional_sampling.py  test_factor_copula.py  test_plotting.py  test_vine_auto_trunc.py  test_vine_r_regression.py
scripts/reference/: generate_bb1_fixtures.R  generate_bb6_fixtures.R  generate_bb7_fixtures.R  generate_bb8_fixtures.R  generate_clayton_fixtures.R  generate_frank_fixtures.R  generate_gaussian_fixtures.R  generate_gumbel_fixtures.R  generate_joe_fixtures.R  generate_khoudraji_fixtures.R  generate_paircopula_fixtures.R  generate_student_t_fixtures.R  generate_tawn_fixtures.R  generate_vine_fixtures.R
