[workspace]
members = [
    "crates/rscopulas-core",
    "crates/rscopulas-accel",
    "crates/rscopulas-python",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["alwo"]
repository = ""

[workspace.dependencies]
criterion = "0.8"
faer = { version = "0.19", features = ["rayon"] }
ndarray = { version = "0.17", features = ["serde"] }
rand = "0.9.2"
rand_distr = "0.5.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
statrs = "0.18.0"
thiserror = "2.0"
