[workspace]
members = [
    "crates/rscopulas-core",
    "crates/rscopulas-python",
]
resolver = "2"

[workspace.package]
version = "0.2.3"
edition = "2024"
license = "MIT"
authors = ["alwo"]
repository = "https://github.com/alexwox/rscopulas"
homepage = "https://github.com/alexwox/rscopulas"

[workspace.dependencies]
criterion = "0.8"
ndarray = { version = "0.17", features = ["serde"] }
rand = "0.9.2"
rand_distr = "0.5.1"
rayon = "1.11"
rscopulas = { version = "0.2.3", path = "crates/rscopulas-core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
statrs = "0.18.0"
thiserror = "2.0"
