[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "rscopulas"
version = "0.1.0"
description = "Python bindings for the rscopulas Rust workspace"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.maturin]
manifest-path = "crates/rscopulas-python/Cargo.toml"
module-name = "rscopulas._rscopulas"
python-source = "python"

[tool.pytest.ini_options]
testpaths = ["python/tests"]
