[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "rscopulas"
version = "0.1.0"
description = "Copula modeling for Python (NumPy) and Rust: vines, pair copulas, and reference-tested pseudo-observation workflows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
viz = ["matplotlib>=3.8"]

[tool.maturin]
manifest-path = "crates/rscopulas-python/Cargo.toml"
module-name = "rscopulas._rscopulas"
python-source = "python"

[tool.pytest.ini_options]
testpaths = ["python/tests"]
