[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "rscopulas"
version = "0.2.0"
description = "Copula modeling for Python (NumPy) and Rust: vines, pair copulas, and reference-tested pseudo-observation workflows"
readme = { file = "PYPI.md", content-type = "text/markdown" }
requires-python = ">=3.10"
authors = [{ name = "alwo" }]
license = { file = "LICENSE" }
keywords = ["copula", "statistics", "vine-copula", "numpy", "pyo3"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = ["numpy>=1.26"]

[project.urls]
Homepage = "https://github.com/alexwox/rscopulas"
Repository = "https://github.com/alexwox/rscopulas"
Issues = "https://github.com/alexwox/rscopulas/issues"
Documentation = "https://github.com/alexwox/rscopulas/tree/master/docs"

[project.optional-dependencies]
viz = ["matplotlib>=3.8"]

[dependency-groups]
dev = [
    "maturin>=1.8,<2.0",
    "pytest>=8.0",
]

[tool.maturin]
manifest-path = "crates/rscopulas-python/Cargo.toml"
module-name = "rscopulas._rscopulas"
python-source = "python"
features = ["pyo3/extension-module", "pyo3/abi3-py310"]
include = [
    { path = "PYPI.md", format = "sdist" },
    { path = "LICENSE", format = "sdist" },
]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
