[package]
name = "rscopulas-accel"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
cuda = []
metal = ["dep:metal"]

[dependencies]
rayon.workspace = true
serde.workspace = true
thiserror.workspace = true
metal = { version = "0.31", optional = true }

