[package]
name = "rscopulas-accel"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
cuda = []
metal = []

[dependencies]
rayon.workspace = true
serde.workspace = true
thiserror.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.31"

[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
cudarc = { version = "0.19.4", default-features = false, features = ["driver", "nvrtc", "dynamic-loading", "cuda-12040"] }

