[package]
name = "rscopulas-accel"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/rscopulas-accel"
readme = "README.md"
description = "Acceleration support crate for rscopulas CPU parallelism and narrow CUDA or Metal kernels"
keywords = ["copula", "cuda", "metal", "parallel", "statistics"]
categories = ["mathematics", "science"]

[features]
default = []
cuda = []
metal = []

[dependencies]
rayon.workspace = true
serde.workspace = true
thiserror.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.31"

[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
cudarc = { version = "0.19.4", default-features = false, features = ["driver", "nvrtc", "dynamic-loading", "cuda-12040"] }

