[package]
name = "rscopulas-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
cuda = ["rscopulas-accel/cuda"]
metal = ["rscopulas-accel/metal"]

[dependencies]
ndarray.workspace = true
rand.workspace = true
rand_distr.workspace = true
rscopulas-accel = { path = "../rscopulas-accel" }
serde.workspace = true
statrs.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
serde_json.workspace = true

[[bench]]
name = "gaussian"
harness = false
