[package]
name = "rscopulas-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/rscopulas-core"
readme = "README.md"
description = "Core Rust library for fitting, evaluating, and sampling copula models and vine copulas"
keywords = ["copula", "statistics", "vines", "dependence", "probability"]
categories = ["mathematics", "science"]

[features]
default = []
cuda = ["rscopulas-accel/cuda"]
metal = ["rscopulas-accel/metal"]

[dependencies]
ndarray.workspace = true
rand.workspace = true
rand_distr.workspace = true
rscopulas-accel.workspace = true
serde.workspace = true
statrs.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
serde_json.workspace = true

[[bench]]
name = "gaussian"
harness = false

[[bench]]
name = "cross_language"
harness = false
